# StereoMatcher

./: CMakeLists.txt  main.cpp  video.cpp
hdf5Writer/: main  main.cpp  writer.cpp  writer.h
methods/: bp.cpp  bp.hpp  ioh.cpp  ioh.hpp  mbp.cpp  mbp.hpp  ncc.cpp  ncc.hpp  sad.cpp  sad.hpp
